examples/sample-product-chart/chart-test/reports/scenario-gateway-api-contour-gateway-api-route-precedence-20260531-192210-3/artifacts/manifests/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-05-31T23:22:44Z"
    labels:
      gateway.networking.k8s.io/gateway-name: sample-gw
      projectcontour.io/owning-gateway-name: sample-gw
    name: contour-sample-gw
    namespace: sample
    resourceVersion: "622"
    uid: 835f8baf-c981-48cf-a478-523ebc35469b
  spec:
    clusterIP: 10.96.37.21
    clusterIPs:
    - 10.96.37.21
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: xds
      port: 8001
      protocol: TCP
      targetPort: 8001
    selector:
      app: contour-sample-gw
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-05-31T23:22:44Z"
    labels:
      gateway.networking.k8s.io/gateway-name: sample-gw
      projectcontour.io/owning-gateway-name: sample-gw
    name: envoy-sample-gw
    namespace: sample
    resourceVersion: "628"
    uid: 2f910602-59df-4a3e-a6de-c4be7bc51ca0
  spec:
    allocateLoadBalancerNodePorts: true
    clusterIP: 10.96.6.230
    clusterIPs:
    - 10.96.6.230
    externalTrafficPolicy: Local
    healthCheckNodePort: 32699
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-80
      nodePort: 32370
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: envoy-sample-gw
    sessionAffinity: None
    type: LoadBalancer
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-05-31T23:22:38Z"
    labels:
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "532"
    uid: 060743ff-4d73-485b-bd85-d69c8ee3440d
  spec:
    clusterIP: 10.96.142.252
    clusterIPs:
    - 10.96.142.252
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: sample
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
